--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -497,7 +497,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "This is an overview that describes 3 methods to install any released package. In this article, I described the fastai2 library use-case. I also explained the goal of each of these 3 methods, and how to select the method that is more suitable to your specific use-case. "
+    "In this article, I presented an overview describing 3 methods to install any package published on both pypi repository and GitHub. I used fastai2 library as use-case. However, the methods described here can be applied to any other package: the name `fastai2` can be replaced by the corresponding package name such as `torch`. I also explained the goal of each of these 3 methods, and how to choose the method that is more suitable to your specific use-case. "
    ]
   }
  ]
