--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -22,8 +22,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 ways to pip install a package - fastai2 use-case\n",
-    "> A detailed description on how to pip install a python package using 3 different methods, and to understand which method to use for your own use-case.\n",
+    "# 3 ways to pip install a package: fastai2 use-case\n",
+    "> A detailed description on how to pip install a python package using 3 different methods, and which method to pick depending on your specific use-case. .\n",
     "\n",
     "- toc: true \n",
     "- badges: false\n",
@@ -37,14 +37,14 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this article, I will show 3 methods to install the new fastai2 library using `pip install`. The 3 methods described here can be used to similar python libraries found on GitHub. I voluntarily omitted the `conda install` option because I wanted to focus on the methods that can be reproduced in any free cloud environment such as Google Colab or Kaggle.\n"
+    "In this article, I will show 3 methods to install the new fastai2 library using `pip install`. The 3 methods described here can be used to similar python libraries published on both pypi repository and on GitHub. I voluntarily omitted the `conda install` option because I wanted to focus on the methods that can be reproduced in any free cloud environment such as Google Colab or Kaggle."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: In this article, the different methods described are generic and therefore can be applied to any python package published on Github repository. You only have to replace the name `fastai2` by the name of the corresponding python package (for example `torch`)"
+    ">Note: In this article, the different methods described are generic and therefore can be applied to any python package. You only have to replace the name `fastai2` by the name of the corresponding python package such as `torch`"
    ]
   },
   {
@@ -73,7 +73,7 @@
     "!pip install fastai2\n",
     "```\n",
     "\n",
-    "The difference between the 2 options is the use of the `!` in the case of Jupyter notebook. However, the result is the same, the fastai2 package will be install in the current active virtual environment. "
+    "The difference between the 2 options is the use of the `!` in the case of Jupyter notebook. However, the result is the same, the fastai2 package will be installed in the current active virtual environment. "
    ]
   },
   {
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Tip: You can create several virtual environments on the same machine. The following is the output of the different virtual environments that I created on my local machine"
+    "> Tip: You can create several virtual environments on the same machine. The following is the output of the different virtual environments that I created on my local machine."
    ]
   },
   {
@@ -130,7 +130,7 @@
     "pip show fastai2\n",
     "```\n",
     "\n",
-    "This command displays some useful information:\n"
+    "This command displays the following useful information:\n"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It displays the package name, version number,  location where it was installed (with the name of the virtual environment: fastai2 is the name in my case), and some other information.\n",
+    "It displays the package name, the version number, the location where it was installed (with the name of the virtual environment: in our case it is fastai2), and some other information.\n",
     "\n",
     ">Note: At the present time (March 17th, 2020), the fastai version found on the pypi repository is **0.0.11**\n"
    ]
@@ -166,7 +166,7 @@
    "source": [
     "## 2- Install from GitHub- Non-editable package\n",
     "\n",
-    ">Note: This method is used by users who are interested in the latest and the greatest features found in the fastai2 Github repository. In general, those users are interested in using the latest fastai2 package without the intention to build new modules that can be used as fastai2 extensions. If this sound a bit unclear, everything will be crystal clear once you wil have read the Method 3 section."
+    ">Note: This method is used by users who are interested in the latest and the greatest features found in the fastai2 Github repository. In general, those users are interested in using the latest fastai2 package without the intention to either contibute to the fastai2 project or build new modules that can be used as fastai2 extensions. If this sound a bit unclear, everything will be crystal clear once you have read the Method 3 section."
    ]
   },
   {
@@ -202,16 +202,16 @@
     ">Important: When using this option, it is very important to also install the `fastcore` library using the very same method:\n",
     "\n",
     "\n",
-    "The command shown, here below, should be sequentially run in order to align the 2 versions:\n",
+    "The command shown, here below, should be run after installing the fastai2 package from its repository in order to align the 2 versions:\n",
     "\n",
     "either from terminal:\n",
     "```python\n",
-    "pip install git+https://github.com/fastai/fastai2.git\n",
+    "pip install git+https://github.com/fastai/fastcore.git\n",
     "``` \n",
     "\n",
     "and from a Jupyter notebook cell:\n",
     "```python\n",
-    "!pip install git+https://github.com/fastai/fastai2.git\n",
+    "!pip install git+https://github.com/fastai/fastcore.git\n",
     "``` "
    ]
   },
@@ -219,30 +219,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may ask yourself why do we have to also install the fastcore library from GitHub given the fact that fastai2 will always install fastcore because it is part of its requirements. The answer relies on fact that fastai2 will install the latest version found in the **pypi repository** as opposed to the latest version found on **GitHub**. If the fastai2 GitHub version is using new features found in the fastcore latest GitHub version, it will lead to an incompatibility if you use fastai2 latest GitHub version combined with the fastcore pypi version: basically, if we had done so we would have been mixing 2 misaligned versions. Consequently, we will end up experiencing some issues, and some errors will ultimately surface. Therefore, it is better to follow the good practice by pip installing both of them using the method described here above."
+    "You may ask yourself why do we have to also install the fastcore library from GitHub given the fact that fastai2 will always install fastcore because it is part of its requirements. The answer relies on fact that fastai2 will install the latest version found in the **pypi repository** as opposed to the latest version found on **GitHub**. If the fastai2 GitHub version is using new features found in the fastcore latest GitHub version, it will lead to an incompatibility if we use fastai2 latest GitHub version combined with the fastcore pypi version: basically, if we had done so we would have been mixing 2 misaligned versions. Consequently, we will end up experiencing some issues, and some errors will ultimately surface. Therefore, it is better to follow the good practice by pip installing both of them using the method described here above."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3- Install from GitHub - Editable package\n",
+    "## 3- Install from GitHub- Editable package\n",
     "\n",
-    ">Note: This method is used by developers who are actively building new modules that depends on fastai2 new features. Those developers are usually either 1) actively contributing to fastai2 project by adding new features or fixing bugs, or 2) creating their own modules, and making sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will realize that their code is incompatible with fastai2 one, at certain point of time.\n"
+    ">Note: This method is used by developers who are usually either 1) actively contributing to fastai2 project by adding new features or fixing bugs, or 2) creating their own modules, and making sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will ultimately realize that their code is incompatible with the fastai2 repository one.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal is to keep our library (that depends on fastai2) aligned to the fastai2 one hand, and to avoid to keep pip installing both fastai2 and fastcore every time a new version is released (this would have been the case had we used Method 2). There exists a magic method (Method 3) that consists in using a so-called an editable version of the target python package (i.e. fastai2 and fastcore)"
+    "The goal is to keep our library (that depends on fastai2) aligned to the fastai2 one hand, and to avoid to keep pip installing both fastai2 and fastcore every time a new version is released (this would have been the case had we used Method 2). Thankfully, there exists a magic method (Method 3) that consists in using a so-called an editable version of the target python package (i.e. fastai2 and fastcore)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Installing an editable version of fastai2 is pretty straightforward. All we have to do is to follow these 3 simple steps, on a terminal console:\n",
+    "Installing an editable version of fastai2 is pretty straightforward. All we have to do is to follow these 3 simple steps by running the following commands from a terminal console:\n",
     "\n",
     "```python\n",
     "git clone https://github.com/fastai/fastai2\n",
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basically, we are cloning the fastai2 repository, then hopping into the cloned fastai2 folder, and finally issuing the command to pip install the package (fastai2) from the current folder (hence the use of the dot **.**) as an editable version by using the **-e** switch."
+    "Basically, we are cloning the fastai2 repository, then hopping into the cloned fastai2 folder, and finally running the command to pip install the package (fastai2) from the current folder (hence the use of the dot **.**) as an editable version by using the **-e** switch."
    ]
   },
   {
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For those following along, and who are familiar with this option, they might notice there is a discrepancy between this method and the one found on the fastai2 repository (shown here below):\n",
+    "For those following along, and who are familiar with this option, they might notice there is a tiny discrepancy between this method and the one found on the fastai2 repository (shown here below):\n",
     "\n",
     "```python\n",
     "git clone https://github.com/fastai/fastai2\n",
@@ -283,7 +283,7 @@
     "pip install -e \".[dev]\"\n",
     "```\n",
     "\n",
-    "The difference is the [dev] part. Using the `[dev]` flag issue an order to the installer to pip install all the packages listed under the dev requirements (`dev_requirements = nbdev`). This means the `nbdev` package (its a fastai package) will be installed from the pypi repository. Given the fact that nbdev is also under heavy development, we may experienced some issues caused by a misalignment between the 3 different fastai packages being fastai2, fastcore, and nbdev. For that reason, it is desirable to also install the `nbdev` package as an editable package as follow:\n",
+    "The difference is the use of the [dev] part. Using the `[dev]` flag issue an order to the installer to pip install all the packages listed under the dev requirements (`dev_requirements = nbdev`). This means the `nbdev` package (its a fastai package) will be installed from the pypi repository. Given the fact that nbdev is also under development, we may experienced some issues caused by a misalignment between the 3 different fastai packages being fastai2, fastcore, and nbdev. For that reason, it is desirable to also install the `nbdev` package as an editable package as follow:\n",
     "\n",
     "```python\n",
     "git clone https://github.com/fastai/nbdev\n",
@@ -383,7 +383,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Activating Python 3.6.9 64-bit ('fastai2_dev': conda) to run Jupyter failed with Error: StdErr from ShellExec, The process cannot access the file because it is being used by another process.\r\nThe process cannot access the file because it is being used by another process.\r\nThe system cannot find the file C:\\Users\\fh\\AppData\\Local\\Temp\\conda-28421-5382.tmp.\r\nThe process cannot access the file because it is being used by another process.\r\n.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Activating Python 3.6.9 64-bit ('fastai2_dev': conda) to run Jupyter failed with Error: StdErr from ShellExec, The process cannot access the file because it is being used by another process.",
+      "The process cannot access the file because it is being used by another process.",
+      "The system cannot find the file C:\\Users\\fh\\AppData\\Local\\Temp\\conda-28421-5382.tmp.",
+      "The process cannot access the file because it is being used by another process.",
+      ".",
+      "at A.checkUsable (c:\\Users\\fh\\.vscode\\extensions\\ms-python.python-2020.2.64397\\out\\client\\extension.js:1:794715)"
+     ]
+    }
+   ],
    "source": [
     "- Install a python package (e.g. fastai2) from the pypi repository:\n",
     "\n",
@@ -403,7 +417,7 @@
     "pip show fastai2\n",
     "```\n",
     "\n",
-    "This is what it displayed on my loacl machine, at the moment I published the present post:\n",
+    "This is what it displayed on my local machine, at the moment I published the present post:\n",
     "\n",
     "```python\n",
     "Name: fastai2\n",
@@ -489,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel **dev_0**: this indicates that they both are editable versions."
+    "> Note: You might have noticed that both my fastai2 and fastcore package share the same **Build Channel** name being  **dev_0**: this indicates that they both are editable versions."
    ]
   },
   {
@@ -497,7 +511,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "In this article, I presented an overview describing 3 methods to install any package published on both pypi repository and GitHub. I used fastai2 library as use-case. However, the methods described here can be applied to any other package: the name `fastai2` can be replaced by the corresponding package name such as `torch`. I also explained the goal of each of these 3 methods, and how to choose the method that is more suitable to your specific use-case. "
+    "In this article, I presented an overview describing 3 methods to install any package published on both pypi repository and GitHub. I used fastai2 library as use-case. However, the methods described here can be applied to any other package: the name `fastai2` can be replaced by the corresponding package name such as `torch`. I also explained the goal of each of these 3 methods, and which method to pick depending on your specific use-case. "
    ]
   }
  ]
