removed semi-colon from title

--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "# 3 ways to pip install a package: fastai2 use-case\n",
-    "> A detailed description on how to pip install a python package using 3 different methods, and which method to pick depending on your specific use-case. .\n",
+    "> A detailed description on how to pip install a python package using 3 different methods, and which method to pick depending on your specific use-case.\n",
     "\n",
     "- toc: true \n",
     "- badges: false\n",
