--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3- Install from GitHub- Editable package\n",
+    "## 3- Installing from GitHub- Editable package\n",
     "\n",
     ">Note: This method is used by developers who are usually either 1) actively contributing to fastai2 project by adding new features or fixing bugs, or 2) creating their own modules, and making sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will ultimately realize that their code is incompatible with the fastai2 repository one.\n"
    ]
