--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2- Install from GitHub- Non-editable package\n",
+    "## 2- Installing from GitHub - Non-editable package\n",
     "\n",
     ">Note: This method is used by users who are interested in the latest and the greatest features found in the fastai2 Github repository. In general, those users are interested in using the latest fastai2 package without the intention to either contibute to the fastai2 project or build new modules that can be used as fastai2 extensions. If this sound a bit unclear, everything will be crystal clear once you have read the Method 3 section."
    ]
