--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -62,6 +62,8 @@
     "\n",
     "•\tUnivariate time series: Representing a single wave (e.g. ECG recording)\n",
     "\n",
+    "![](images/ECG.png)\n",
+    "\n",
     "•\tMultivariate time series: Representing a set of related waves such as NATOPS recording which represent sensors recordings at different location (see here below for more details)\n",
     "\n",
     "![](images/ts-right-arm.png)\n",
@@ -167,9 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CAM Figure!!!\n",
-    "\n",
-    "![](images/show-results.png)"
+    "![](images/CAM-ECG.png)"
    ]
   },
   {
