added NATOPS image

--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "•\tMultivariate time series: Representing a set of related waves such as NATOPS recording which represent sensors recordings at different location (see here below for more details)\n",
     "\n",
-    "![](images/ts-right-arm.png)\n",
+    "![](images/NATOPS-24-Channels.png)\n",
     "\n",
     "![](images/NATOPS.jpg)"
    ]
