--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -8,10 +8,10 @@
     "> A soft introduction to time series classification using state of the art neural network architecture.\n",
     "\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
-    "- author: Farid Hassainia, PhD\n",
-    "- categories: [time series, deep learning, AI, classification, regression, segmentation, forecasting]"
+    "- categories: [AI]\n",
+    "- author: Farid Hassainia, PhD"
    ]
   },
   {
