--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -212,6 +212,8 @@
     "As a new Twitter user, I would like to kindly ask you to follow me @ai_fast_track. I will post there the sequel of this blog post.\n",
     "\n",
     "I also intend to post on Twitter, on regular basis, Tips & Tricks about fastai(2) and Deep Learning in general. Stay Tuned, and Stay Safe!\n",
+    "\n",
+    ">Note: I wanted to end this article by saying that I was immune to \"unfollowers\" because I haven't any follower yet. To my big surprise, I discovered that I already had one follower: @jcatanz, before even starting tweeting. Thank you so much Joseph for being my first follower! Hopefully, other fastai members will do the same!\n",
     " \n"
    ]
   },
