added references to Google Colab notebooks

--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: You could run the whole [training_using_default_settings.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/training_using_default_settings.ipynb) notebook in Google Collab by clicking the link."
+    ">Note: You could run the whole [training_using_default_settings.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/training_using_default_settings.ipynb) notebook in Google Colab by clicking the link."
    ]
   },
   {
@@ -137,7 +137,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#collapse-show\n",
     "path = unzip_data(URLs_TS.NATOPS)\n",
     "dls = TSDataLoaders.from_files(bs=32,fnames=[path/'NATOPS_TRAIN.arff', path/'NATOPS_TEST.arff'], batch_tfms=[Normalize()]) \n",
     "learn = ts_learner(dls)\n",
@@ -163,6 +162,13 @@
    "metadata": {},
    "source": [
     "The package also features Class Activation Map (CAM) for time series. CAM is used to help interpreting the results of our NN model decision. The package offers both CAM and GRAD-CAM as well as user-defined CAM.  The [cam_tutorial_ECG200.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/cam_tutorial_ECG200.ipynb) notebook illustrates a simple example of the univariate ECG200 dataset classification task (Normal Heartbeat vs. Myocardial Infarction). Like in vision, the colors represent the activation values at a given layer (in this example it is located before the FC layer (last layer)). Notice how the Myocardial Infarction plots (2nd, 3rd, and 4th) share similar activation zones that are quite different from those corresponding to Normal Heartbeat plots (1st and 5th). This kind of representation eases the interpretation of the results obtained using a given NN model (InceptionTime, in this case)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Note: You can also run the The [cam_tutorial_ECG200.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/cam_tutorial_ECG200.ipynb) notebook in Google Colab by clicking the link."
    ]
   },
   {
