--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "2. Show you a step by step how this package was built using fastai2 library,\n",
     "\n",
-    "3. Introduce you to some key concepts of the fastai2 library such as Datasets, DataLoaders, DataBlock, Transform, etc.)\n",
+    "3. Introduce you to some key concepts of the fastai2 library such as Datasets, DataLoaders, DataBlock, Transform, etc.\n",
     "\n"
    ]
   },
@@ -42,7 +42,9 @@
    "source": [
     "## Introduction\n",
     "Unlike Computer Vision (CV), Time Series (TS) analysis is not the hottest topic in the Artificial Intelligence (AI)/DL eco-system. Lately, CV starts to lose a bit of its luster because of the amount of controversies around facial detection abusive applications among other reasons. As a potential positive consequence, we hope more attention will be geared towards TS analysis opening the door to more innovation in the TS field.\n",
-    " \n",
+    "\n",
+    "Another positive aspect of using DL in the TS field is the fact that training a NN TS model uses far less both CPU and GPU resources. As a matter of fact, it uses a fraction of the compute resources in comparison to those needed to train NN models in both CV and NLP. \n",
+    "\n",
     "Compared to both CV and Natural Language Processing (NLP), TS is still in its infancy in terms of DL innovations. This offers the opportunity to talented people to step in this domain and to start innovating and creating new models that are specifically designed to time series. Those new models could be built from the ground or inspired by some already established NN models such as ResNet in CV, and LSTM in NLP. \n",
     " \n",
     "fastai2 could play a significant role in developing this field thanks to its unified APIs that already spans several domains such as Vison, NLP, and Tabular, on one hand, and to its level of granularity in terms of APIs depth (High, Mid, and Low Levels APIs), on the other hand. \n",
@@ -128,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: You could run the whole [training_using_default_settings.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/training_using_default_settings.ipynb) notebook in Google Colab by clicking the link."
+    ">Note: You can run the whole [training_using_default_settings.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/training_using_default_settings.ipynb) notebook in Google Colab by clicking on the link."
    ]
   },
   {
@@ -168,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: You can also run the The [cam_tutorial_ECG200.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/cam_tutorial_ECG200.ipynb) notebook in Google Colab by clicking the link."
+    ">Note: You can also run the The [cam_tutorial_ECG200.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/cam_tutorial_ECG200.ipynb) notebook in Google Colab by clicking on the link."
    ]
   },
   {
