--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this article, I will introduce you to a new package called [timeseries](https://github.com/ai-fast-track/timeseries)  for [fastai2](https://github.com/fastai/fastai2) that I lately developed. The timeseries package allows you to train a Neural Network (NN) model in order to classify both univariate and multivariate time series using the powerful fastai2 library and achieve a State Of The Art (SOTA) results. \n"
+    "In this article, I will introduce you to a new package called [timeseries](https://github.com/ai-fast-track/timeseries)  for [fastai2](https://github.com/fastai/fastai2) that I lately developed. The timeseries package allows you to train a Neural Network (NN) model in order to classify both univariate and multivariate time series using the powerful fastai2 library and achieve State Of The Art (SOTA) results. \n"
    ]
   },
   {
@@ -51,7 +51,7 @@
     " \n",
     "By using fastai2, not only, this will accelerate the development of new libraries but it will also offer a fast learning curve for users exploring those new TS libraries: in other word, we can leverage the transfer learning between different modules that constitutes the fastai2 library.\n",
     "\n",
-    "Before diving in the core subject, let's define what is a time series.\n",
+    "Before diving in the core subject, let's define what a time series is.\n",
     "\n"
    ]
   },
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: **AIoT and AI in Edgepoint**<br><br>Many big companies and startups are heavily investing in developing both AI-enabled processors and micro-controllers for AI in edgepoint Applications.<br><br>Nowadays, the edge AI portion of a smartphone System-on-Chip (SoC) represents only about 5% of the total area and about US$3.50 of the total cost, and would use about 95% less power than the whole SoC does. This stressed out how affordable the AI chips already are.<br><br>The wide spread of both AI chips and artificial intelligence of things (AIoT) will make NN model training and/or inference at edgepoints a reality. AI inference on the edgepoint device is very attractive because it increases latency, saves bandwidth, helps privacy, and saves power associated with RF transmission of data to the cloud.<br><br>Furthermore, the ability to collect, interpret, and immediately act on vast amounts of data is critical for many of the data-heavy applications.<br><br>As a consequence, this will likely drive significant changes for consumers and enterprises applications. Smart machines powered by AI chips will have a huge impact on a wide variety of industries such as manufacturing, logistics, agriculture, energy, etc.<br><br>TS processing using AI/DL techniques could play a key role in implementing AI on edgepoint given the fact that TS uses far less resources such as memory and compute.\n"
+    ">Note: **AIoT and AI in Edgepoint**<br><br>Many big companies and startups are heavily investing in developing both AI-enabled processors and micro-controllers for AI in edgepoint Applications.<br><br>Nowadays, the edge AI portion of a smartphone System-on-Chip (SoC) represents only about 5% of the total area and about US$3.50 of the total cost, and would use about 95% less power than the whole SoC does. This stressed out how affordable the AI chips already are.<br><br>The wide spread of both AI chips and artificial intelligence of things (AIoT) will make NN model training and/or inference at edgepoints a reality. AI inference on the edgepoint device is very attractive because it increases latency, saves bandwidth, helps privacy, and saves power associated with RF transmission of data to the cloud.<br><br>Furthermore, the ability to collect, interpret, and immediately act on vast amounts of data is critical for many of the data-heavy applications.<br><br>As a consequence, this will likely drive significant changes for consumers and enterprises applications. Smart machines powered by AI chips will have a huge impact on a wide variety of industries such as manufacturing, logistics, agriculture, energy, etc.<br><br>TS processing using AI/DL techniques could play a key role in implementing AI on edgepoint given the fact that TS uses far less resources such as memory and compute than both CV and NLP counterparts.\n"
    ]
   },
   {
@@ -116,7 +116,7 @@
     "## What is the goal of the NATOPS time series classification?\n",
     "The NATOPS dataset contains time series recordings corresponding to different commands executed by different operators. \n",
     " \n",
-    "The goal is to train our NN model using both a training dataset and a valid dataset. After training our model and achieving a high accuracy score, we feed our model a given sensor test data without providing its class (label) (e.g. \"4: Spread wings\"), and our model will predict which class the sensor data correspond to  (i.e. \"4: Spread wings\")."
+    "The goal is to train our NN model using both a training dataset and a valid dataset. After training our model and achieving a high accuracy score, we feed our model a given sensor test data without providing its class (label) (e.g. \"4: Spread wings\"), and our model will predict which class the sensor data correspond to  (hopefully \"4: Spread wings\")."
    ]
   },
   {
@@ -126,18 +126,19 @@
     "## End-to-End Training\n",
     "In this section, I will show how easy to train a NN model, and achieve some SOTA results in a record time. Before doing that, let’s introduce the timeseries package. The latter was designed to mimic the unified fastai v2 APIs used for vision, text, and tabular in order to ease its use among users familiar with the fastai2 APIs. As a consequence, those who already used fastai2 vision module will feel familiar with the timeseries APIs. Timeseries package uses Datasets, DataBlock, and a new TSDataLoaders and a new TensorTS classes. It has the following mapping with fastai2 vision module:\n",
     " \n",
-    "TensorImage  <---> TensorTS\n",
+    "TensorImage  <---> TensorTS<br>\n",
     "Conv2D       <---> Conv1D\n",
     " \n",
     "The timeseries package also references 128 Univariate and 30 Multivariate time series datasets. Using URLs_TS class (similar to fastai URLs class) you might play with one of those 158 datasets.\n",
-    "Similarly, to fastai vision examples, we can train any time series dataset end-to-end with 4 lines of code. In the example shown, here below, we use TSDataLoaders and a multivariate the NATOPS dataset. "
+    "\n",
+    "Similarly to fastai vision examples, we can train any time series dataset end-to-end with 4 lines of code. In the example shown, here below, we use TSDataLoaders and the multivariate NATOPS dataset. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: The whole [training_using_default_settings.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/training_using_default_settings.ipynb) notebook can be run in Google Colab by clicking on the link."
+    ">Tip: The whole [training_using_default_settings.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/training_using_default_settings.ipynb) notebook can be run in Google Colab by clicking on the link."
    ]
   },
   {
@@ -177,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: the [cam_tutorial_ECG200.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/cam_tutorial_ECG200.ipynb) notebook can be run in Google Colab by clicking on the link."
+    ">Tip: the [cam_tutorial_ECG200.ipynb](https://github.com/ai-fast-track/timeseries/blob/master/nbs/cam_tutorial_ECG200.ipynb) notebook can be run in Google Colab by clicking on the link."
    ]
   },
   {
@@ -197,9 +198,9 @@
     "1. In line 1, we are downloading a dataset (NATOPS dataset precisely) that is hosted at the [Time Series Classification Repository website]( http://www.timeseriesclassification.com/), unzipping the dataset, and saving it a separate folder under the local ./fastai/data folder. \n",
     " \n",
     "2. In line 2, a lot of action is occurring there, and can be summarized as follow:\n",
-    "- Create a 2 Dataset objects containing a train dataset, and a valid dataset.\n",
+    "- Creating a 2 Dataset objects containing a train dataset, and a valid dataset.\n",
     " \n",
-    "- Create 2 DataLoader objects that allows us to create mini-batches for both training and valid datasets. \n",
+    "- Creating 2 DataLoader objects that allows us to create mini-batches for both training and valid datasets. \n",
     " \n",
     "3. In line 3, we create a learner where we basically do the following:\n",
     "- Create an NN model, InceptionTime in our case. \n",
@@ -222,7 +223,7 @@
     "## Conclusion\n",
     "I hope this first article convey you into trying the timeseries package. You might also check out its [documentation](https://ai-fast-track.github.io/timeseries/). All the notebooks are self-contained, and documented. You will be able to directly run them in Google Colab.  \n",
     " \n",
-    "If you give it a try and found it interesting/helpful, please let others know it by staring it on GitHub, and share with your friends and colleagues who might be interested in this topic.\n",
+    "If you give it a try and found it interesting/helpful, please let others know it by staring it on GitHub, and share it with your friends and colleagues who might be interested in this topic.\n",
     "\n",
     "As a new Twitter user, I would like to kindly ask you to follow me @ai_fast_track. I will post there the sequel of this blog post.\n",
     "\n",
