added note wrt timeseries status

--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -32,6 +32,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ">Note: The timeseries package is still under development, and it is not part of the official fastai2 library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Objectives:\n",
     "The key objectives of this series of articles are:\n",
     "\n",
