--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -10,7 +10,7 @@
     "- toc: true \n",
     "- badges: false\n",
     "- comments: true\n",
-    "- categories: [AI]\n",
+    "- categories: [timeseries]\n",
     "- author: Farid Hassainia, PhD"
    ]
   },
