--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Time Series Classification Using Deep Learning - Part 1\n",
-    "> A soft introduction to time series classification using state of the art neural network architecture.\n",
+    "> A gentle introduction to time series classification using state of the art neural network architecture.\n",
     "\n",
     "- toc: true \n",
     "- badges: false\n",
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: The timeseries package is still under development, and it is not part of the official fastai2 library"
+    ">Note: The timeseries package is still under development, and it is not part of the official fastai2 library."
    ]
   },
   {
