--- a/_notebooks/2020-05-21-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-21-time-series-using-deep-learning-part-1.ipynb
@@ -260,7 +260,7 @@
     "\n",
     "I also intend to post on Twitter, on regular basis, Tips & Tricks about fastai(2) and Deep Learning in general. Stay Tuned, and Stay Safe!\n",
     "\n",
-    ">Note: I wanted to end this article by saying that I was immune to \"unfollowers\" because I haven't any follower yet. To my big surprise, I discovered that I already had one follower: @jcatanz, before even starting tweeting. Thank you Joseph for being my first follower! Hopefully, other fastai members will do the same!\n",
+    ">Note: I wanted to end this article by saying that I was immune to \"unfollowers\" because I haven't any follower yet. To my big surprise, I discovered that I already had one follower: @jcatanza, before even starting tweeting. Thank you Joseph for being my first follower! Hopefully, other fastai members will do the same!\n",
     " \n"
    ]
   },
